[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-accounts-bench"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rayon = "1.5.3"
waffles-solana-logger = { path = "../logger", version = "=1.15.0" }
waffles-solana-measure = { path = "../measure", version = "=1.15.0" }
waffles-solana-runtime = { path = "../runtime", version = "=1.15.0" }
waffles-solana-sdk = { path = "../sdk", version = "=1.15.0" }
waffles-solana-version = { path = "../version", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
