[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-accounts-cluster-bench"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
publish = false

[dependencies]
clap = "2.33.1"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
waffles-solana-account-decoder = { path = "../account-decoder", version = "=1.15.0" }
waffles-solana-clap-utils = { path = "../clap-utils", version = "=1.15.0" }
waffles-solana-client = { package = "waffles-solana-client", path = "../client", version = "=1.15.0" }
waffles-solana-faucet = { path = "../faucet", version = "=1.15.0" }
waffles-solana-gossip = { path = "../gossip", version = "=1.15.0" }
waffles-solana-logger = { path = "../logger", version = "=1.15.0" }
waffles-solana-measure = { path = "../measure", version = "=1.15.0" }
waffles-solana-net-utils = { path = "../net-utils", version = "=1.15.0" }
waffles-solana-rpc-client = { path = "../rpc-client", version = "=1.15.0" }
solana-runtime = { package = "waffles-solana-runtime", path = "../runtime", version = "=1.15.0" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0" }
waffles-solana-streamer = { path = "../streamer", version = "=1.15.0" }
waffles-solana-transaction-status = { path = "../transaction-status", version = "=1.15.0" }
waffles-solana-version = { path = "../version", version = "=1.15.0" }
spl-token = { version = "=3.5.0", features = ["no-entrypoint"] }

[dev-dependencies]
waffles-solana-core = { path = "../core", version = "=1.15.0" }
waffles-solana-local-cluster = { path = "../local-cluster", version = "=1.15.0" }
waffles-solana-test-validator = { path = "../test-validator", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
