[package]
name = "waffles-solana-banks-interface"
version = "1.15.0-2"
description = "Waffle Labs maintained Solana banks RPC interface"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-banks-interface"
edition = "2021"

[dependencies]
serde = { version = "1.0.144", features = ["derive"] }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0-2" }
tarpc = { version = "0.29.0", features = ["full"] }

[lib]
crate-type = ["lib"]
name = "solana_banks_interface"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
