[package]
name = "waffles-solana-banks-server"
version = "1.16.0-alpha.9"
description = "Waffle Labs maintained Solana banks server"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-banks-server"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5"
futures = "0.3"
solana-banks-interface = { package = "waffles-solana-banks-interface", path = "../banks-interface", version = "=1.16.0-alpha.9" }
solana-client = { package = "waffles-solana-client", path = "../client", version = "=1.16.0-alpha.9" }
solana-runtime = { package = "waffles-solana-runtime", path = "../runtime", version = "=1.16.0-alpha.9" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.9" }
solana-send-transaction-service = { package = "waffles-solana-send-transaction-service", path = "../send-transaction-service", version = "=1.16.0-alpha.9" }
tarpc = { version = "0.29.0", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tokio-serde = { version = "0.8", features = ["bincode"] }
tokio-stream = "0.1"

[lib]
crate-type = ["lib"]
name = "solana_banks_server"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
