[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-bench-streamer"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
publish = false

[dependencies]
clap = { version = "3.1.5", features = ["cargo"] }
crossbeam-channel = "0.5"
solana-net-utils = { package = "waffles-solana-net-utils", path = "../net-utils", version = "=1.15.0" }
solana-streamer = { package = "waffles-solana-streamer", path = "../streamer", version = "=1.15.0" }
solana-version = { package = "waffles-solana-version", path = "../version", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
