[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "solana-bench-tps"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
publish = false

[dependencies]
clap = "2.33.1"
crossbeam-channel = "0.5"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
serde_json = "1.0.83"
serde_yaml = "0.9.13"
waffles-solana-clap-utils = { path = "../clap-utils", version = "=1.15.0" }
waffles-solana-cli-config = { path = "../cli-config", version = "=1.15.0" }
waffles-solana-client = { path = "../client", version = "=1.15.0" }
waffles-solana-core = { path = "../core", version = "=1.15.0" }
waffles-solana-faucet = { path = "../faucet", version = "=1.15.0" }
waffles-solana-genesis = { path = "../genesis", version = "=1.15.0" }
waffles-solana-gossip = { path = "../gossip", version = "=1.15.0" }
waffles-solana-logger = { path = "../logger", version = "=1.15.0" }
waffles-solana-measure = { path = "../measure", version = "=1.15.0" }
waffles-solana-metrics = { path = "../metrics", version = "=1.15.0" }
waffles-solana-net-utils = { path = "../net-utils", version = "=1.15.0" }
waffles-solana-rpc = { path = "../rpc", version = "=1.15.0" }
waffles-solana-rpc-client = { path = "../rpc-client", version = "=1.15.0", default-features = false }
waffles-solana-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.0" }
waffles-solana-rpc-client-nonce-utils = { path = "../rpc-client-nonce-utils", version = "=1.15.0" }
waffles-solana-runtime = { path = "../runtime", version = "=1.15.0" }
waffles-solana-sdk = { path = "../sdk", version = "=1.15.0" }
waffles-solana-streamer = { path = "../streamer", version = "=1.15.0" }
waffles-solana-thin-client = { path = "../thin-client", version = "=1.15.0" }
waffles-solana-tpu-client = { path = "../tpu-client", version = "=1.15.0", default-features = false }
waffles-solana-version = { path = "../version", version = "=1.15.0" }
spl-instruction-padding = "0.1"
thiserror = "1.0"

[dev-dependencies]
serial_test = "0.9.0"
waffles-solana-local-cluster = { path = "../local-cluster", version = "=1.15.0" }
waffles-solana-test-validator = { path = "../test-validator", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
