[package]
name = "waffles-solana-bucket-map"
version = "1.16.0-alpha.5"
description = "Waffle Labs maintained solana-bucket-map"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-bucket-map"
readme = "../README.md"
repository = "https://github.com/waffles-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
license = "Apache-2.0"
edition = "2021"

[dependencies]
log = { version = "0.4.17" }
memmap2 = "0.5.8"
modular-bitfield = "0.11.2"
rand = "0.7.0"
solana-measure = { package = "waffles-solana-measure", path = "../measure", version = "=1.16.0-alpha.5" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.5" }
tempfile = "3.3.0"

[dev-dependencies]
fs_extra = "1.2.0"
rayon = "1.5.3"
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.16.0-alpha.5" }

[lib]
crate-type = ["lib"]
name = "solana_bucket_map"

[[bench]]
name = "bucket_map"
