[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-cli-config"
description = "Waffle Labs maintained Blockchain, Rebuilt for Scale"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-cli-config"

[dependencies]
dirs-next = "2.0.0"
lazy_static = "1.4.0"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_yaml = "0.9.13"
waffles-solana-clap-utils = { path = "../clap-utils", version = "=1.15.0" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0" }
url = "2.2.2"

[dev-dependencies]
anyhow = "1.0.58"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
