[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-cli-output"
description = "Waffle Labs maintained Blockchain, Rebuilt for Scale"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-cli-output"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
indicatif = "0.17.1"
pretty-hex = "0.3.0"
semver = "1.0.14"
serde = "1.0.144"
serde_json = "1.0.83"
waffles-solana-account-decoder = { path = "../account-decoder", version = "=1.15.0" }
waffles-solana-clap-utils = { path = "../clap-utils", version = "=1.15.0" }
waffles-solana-cli-config = { path = "../cli-config", version = "=1.15.0" }
waffles-solana-rpc-client-api = { path = "../rpc-client-api", version = "=1.15.0" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0" }
waffles-solana-transaction-status = { path = "../transaction-status", version = "=1.15.0" }
waffles-solana-vote-program = { path = "../programs/vote", version = "=1.15.0" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = "=1.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
