[package]
name = "waffles-solana-cli-output"
description = "Waffle Labs maintained Blockchain, Rebuilt for Scale"
version = "1.16.0-alpha.3"
repository = "https://github.com/waffles-labs/solana"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-cli-output"

[dependencies]
Inflector = "0.11.4"
base64 = "0.13.0"
chrono = { version = "0.4.22", features = ["serde"] }
clap = "2.33.0"
console = "0.15.0"
humantime = "2.0.1"
indicatif = "0.17.1"
pretty-hex = "0.3.0"
semver = "1.0.16"
serde = "1.0.152"
serde_json = "1.0.83"
solana-account-decoder = { package = "waffles-solana-account-decoder", path = "../account-decoder", version = "=1.16.0-alpha.2" }
solana-clap-utils = { package = "waffles-solana-clap-utils", path = "../clap-utils", version = "=1.16.0-alpha.2" }
solana-cli-config = { package = "waffles-solana-cli-config", path = "../cli-config", version = "=1.16.0-alpha.2" }
solana-rpc-client-api = { package = "waffles-solana-rpc-client-api", path = "../rpc-client-api", version = "=1.16.0-alpha.2" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.2" }
solana-transaction-status = { package = "waffles-solana-transaction-status", path = "../transaction-status", version = "=1.16.0-alpha.2" }
solana-vote-program = { package = "waffles-solana-vote-program", path = "../programs/vote", version = "=1.16.0-alpha.2" }
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }

[dev-dependencies]
ed25519-dalek = "=1.0.1"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
