[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-cli"
description = "Waffle Labs maintained Blockchain, Rebuilt for Scale"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-cli"

[dependencies]
bincode = "1.3.3"
bs58 = "0.4.0"
clap = "2.33.1"
console = "0.15.0"
const_format = "0.2.26"
criterion-stats = "0.3.0"
crossbeam-channel = "0.5"
ctrlc = { version = "3.2.3", features = ["termination"] }
humantime = "2.0.1"
log = "0.4.17"
num-traits = "0.2"
pretty-hex = "0.3.0"
reqwest = { version = "0.11.12", default-features = false, features = [
	"blocking",
	"brotli",
	"deflate",
	"gzip",
	"rustls-tls",
	"json"
] }
semver = "1.0.14"
serde = "1.0.144"
serde_derive = "1.0.103"
serde_json = "1.0.83"
solana-account-decoder = { package = "waffles-solana-account-decoder", path = "../account-decoder", version = "=1.15.0" }
waffles-solana-address-lookup-table-program = { path = "../programs/address-lookup-table", version = "=1.15.0" }
waffles-solana-bpf-loader-program = { path = "../programs/bpf_loader", version = "=1.15.0" }
solana-clap-utils = { package = "waffles-solana-clap-utils", path = "../clap-utils", version = "=1.15.0" }
waffles-solana-cli-config = { path = "../cli-config", version = "=1.15.0" }
waffles-solana-cli-output = { path = "../cli-output", version = "=1.15.0" }
solana-client = { package = "waffles-solana-client", path = "../client", version = "=1.15.0" }
waffles-solana-config-program = { path = "../programs/config", version = "=1.15.0" }
solana-faucet = { package = "waffles-solana-faucet", path = "../faucet", version = "=1.15.0" }
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.15.0" }
waffles-solana-program-runtime = { path = "../program-runtime", version = "=1.15.0" }
solana-pubsub-client = { package = "waffles-solana-pubsub-client", path = "../pubsub-client", version = "=1.15.0" }
waffles-solana-remote-wallet = { path = "../remote-wallet", version = "=1.15.0" }
solana-rpc-client = { package = "waffles-solana-rpc-client", path = "../rpc-client", version = "=1.15.0" }
solana-rpc-client-api = { package = "waffles-solana-rpc-client-api", path = "../rpc-client-api", version = "=1.15.0" }
waffles-solana-rpc-client-nonce-utils = { path = "../rpc-client-nonce-utils", version = "=1.15.0" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0" }
waffles-solana-tpu-client = { path = "../tpu-client", version = "=1.15.0" }
solana-transaction-status = { package = "waffles-solana-transaction-status", path = "../transaction-status", version = "=1.15.0" }
solana-version = { package = "waffles-solana-version", path = "../version", version = "=1.15.0" }
waffles-solana-vote-program = { path = "../programs/vote", version = "=1.15.0" }
solana_rbpf = "=0.2.38"
spl-memo = { version = "=3.0.1", features = ["no-entrypoint"] }
thiserror = "1.0.31"
tiny-bip39 = "0.8.2"

[dev-dependencies]
solana-streamer = { package = "waffles-solana-streamer", path = "../streamer", version = "=1.15.0" }
solana-test-validator = { package = "waffles-solana-test-validator", path = "../test-validator", version = "=1.15.0" }
tempfile = "3.3.0"

[[bin]]
name = "solana"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
