[package]
name = "waffles-solana-client-test"
version = "1.15.0-2"
description = "Waffle Labs maintained Solana RPC Test"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-client-test"
edition = "2021"
publish = false

[dependencies]
futures-util = "0.3.25"
serde_json = "1.0.83"
waffles-solana-ledger = { path = "../ledger", version = "=1.15.0-2" }
solana-measure = { package = "waffles-solana-measure", path = "../measure", version = "=1.15.0-2" }
waffles-solana-merkle-tree = { path = "../merkle-tree", version = "=1.15.0-2" }
solana-metrics = { package = "waffles-solana-metrics", path = "../metrics", version = "=1.15.0-2" }
solana-perf = { package = "waffles-solana-perf", path = "../perf", version = "=1.15.0-2" }
solana-pubsub-client = { package = "waffles-solana-pubsub-client", path = "../pubsub-client", version = "=1.15.0-2" }
solana-rayon-threadlimit = { package = "waffles-solana-rayon-threadlimit", path = "../rayon-threadlimit", version = "=1.15.0-2" }
waffles-solana-rpc = { path = "../rpc", version = "=1.15.0-2" }
solana-rpc-client = { package = "waffles-solana-rpc-client", path = "../rpc-client", version = "=1.15.0-2", default-features = false }
solana-rpc-client-api = { package = "waffles-solana-rpc-client-api", path = "../rpc-client-api", version = "=1.15.0-2" }
solana-runtime = { package = "waffles-solana-runtime", path = "../runtime", version = "=1.15.0-2" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0-2" }
solana-streamer = { package = "waffles-solana-streamer", path = "../streamer", version = "=1.15.0-2" }
solana-test-validator = { package = "waffles-solana-test-validator", path = "../test-validator", version = "=1.15.0-2" }
solana-transaction-status = { package = "waffles-solana-transaction-status", path = "../transaction-status", version = "=1.15.0-2" }
solana-version = { package = "waffles-solana-version", path = "../version", version = "=1.15.0-2" }
systemstat = "0.2.0"
tokio = { version = "~1.14.1", features = ["full"] }
tungstenite = { version = "0.17.2", features = ["rustls-tls-webpki-roots"] }

[dev-dependencies]
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.15.0-2" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
