[package]
name = "waffles-solana-client"
version = "1.16.0-alpha.6"
description = "Waffle Labs maintained Solana Client"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-client"
license = "Apache-2.0"
edition = "2021"

[dependencies]
async-trait = "0.1.57"
bincode = "1.3.3"
enum_dispatch = "0.3.8"
futures = "0.3"
futures-util = "0.3.26"
indexmap = "1.9.1"
indicatif = { version = "0.17.1" }
log = "0.4.17"
quinn = "0.9.3"
rand = "0.7.0"
rayon = "1.5.3"
solana-connection-cache = { package = "waffles-solana-connection-cache", path = "../connection-cache", version = "=1.16.0-alpha.6" }
solana-measure = { package = "waffles-solana-measure", path = "../measure", version = "=1.16.0-alpha.6" }
solana-metrics = { package = "waffles-solana-metrics", path = "../metrics", version = "=1.16.0-alpha.6" }
solana-net-utils = { package = "waffles-solana-net-utils", path = "../net-utils", version = "=1.16.0-alpha.6" }
solana-pubsub-client = { package = "waffles-solana-pubsub-client", path = "../pubsub-client", version = "=1.16.0-alpha.6" }
solana-quic-client = { package = "waffles-solana-quic-client", path = "../quic-client", version = "=1.16.0-alpha.6" }
solana-rpc-client = { package = "waffles-solana-rpc-client", path = "../rpc-client", version = "=1.16.0-alpha.6" }
solana-rpc-client-api = { package = "waffles-solana-rpc-client-api", path = "../rpc-client-api", version = "=1.16.0-alpha.6" }
solana-rpc-client-nonce-utils = { package = "waffles-solana-rpc-client-nonce-utils", path = "../rpc-client-nonce-utils", version = "=1.16.0-alpha.6" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.6" }
solana-streamer = { package = "waffles-solana-streamer", path = "../streamer", version = "=1.16.0-alpha.6" }
solana-thin-client = { package = "waffles-solana-thin-client", path = "../thin-client", version = "=1.16.0-alpha.6" }
solana-tpu-client = { package = "waffles-solana-tpu-client", path = "../tpu-client", version = "=1.16.0-alpha.6" }
solana-udp-client = { package = "waffles-solana-udp-client", path = "../udp-client", version = "=1.16.0-alpha.6" }
thiserror = "1.0"
tokio = { version = "1", features = ["full"] }

[dev-dependencies]
crossbeam-channel = "0.5"
rand_chacha = "0.2.2"
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.16.0-alpha.6" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
