[package]
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
edition = "2021"
name = "waffles-solana-dos"
version = "1.15.0"
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
publish = false
description = "Waffle Labs maintained Tool to send various requests to cluster in order to evaluate the effect on performance"

[dependencies]
bincode = "1.3.3"
clap = { version = "3.1.5", features = ["derive", "cargo"] }
crossbeam-channel = "0.5.6"
itertools = "0.10.5"
log = "0.4.17"
rand = "0.7.0"
serde = "1.0.144"
waffles-solana-bench-tps = { path = "../bench-tps", version = "=1.15.0" }
waffles-solana-client = { package = "waffles-solana-client", path = "../client", version = "=1.15.0" }
waffles-solana-core = { path = "../core", version = "=1.15.0" }
waffles-solana-faucet = { path = "../faucet", version = "=1.15.0" }
waffles-solana-gossip = { path = "../gossip", version = "=1.15.0" }
waffles-solana-logger = { path = "../logger", version = "=1.15.0" }
waffles-solana-measure = { path = "../measure", version = "=1.15.0" }
waffles-solana-net-utils = { path = "../net-utils", version = "=1.15.0" }
waffles-solana-perf = { path = "../perf", version = "=1.15.0" }
waffles-solana-rpc = { path = "../rpc", version = "=1.15.0" }
waffles-solana-rpc-client = { path = "../rpc-client", version = "=1.15.0", default-features = false }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.15.0" }
waffles-solana-streamer = { path = "../streamer", version = "=1.15.0" }
waffles-solana-tpu-client = { path = "../tpu-client", version = "=1.15.0", default-features = false }
waffles-solana-version = { path = "../version", version = "=1.15.0" }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dev-dependencies]
serial_test = "0.9.0"
waffles-solana-local-cluster = { path = "../local-cluster", version = "=1.15.0" }
waffles-solana-thin-client = { path = "../thin-client", version = "=1.15.0" }
