[package]
name = "waffles-solana-entry"
version = "1.16.0-alpha.6"
description = "Waffle Labs maintained Solana Entry"
authors = ["Solana Maintainers <maintainers@solana.foundation", "Waffle Labs Maintainers <maintainers@waffles.so>"]
repository = "https://github.com/waffles-labs/solana"
license = "Apache-2.0"
homepage = "https://waffles.so/"
documentation = "https://docs.rs/waffles-solana-poh"
edition = "2021"

[dependencies]
bincode = "1.3.3"
crossbeam-channel = "0.5"
dlopen = "0.1.8"
dlopen_derive = "0.1.4"
lazy_static = "1.4.0"
log = "0.4.17"
rand = "0.7.0"
rayon = "1.5.3"
serde = "1.0.152"
solana-measure = { package = "waffles-solana-measure", path = "../measure", version = "=1.16.0-alpha.6" }
solana-merkle-tree = { package = "waffles-solana-merkle-tree", ppath = "../merkle-tree", version = "=1.16.0-alpha.6" }
solana-metrics = { package = "waffles-solana-metrics", path = "../metrics", version = "=1.16.0-alpha.6" }
solana-perf = { package = "waffles-solana-perf", path = "../perf", version = "=1.16.0-alpha.6" }
solana-rayon-threadlimit = { package = "waffles-solana-rayon-threadlimit", path = "../rayon-threadlimit", version = "=1.16.0-alpha.6" }
solana-sdk = { package = "waffles-solana-sdk", path = "../sdk", version = "=1.16.0-alpha.6" }
waffles-solana-program = "=1.16.0-alpha.6"

[dev-dependencies]
matches = "0.1.9"
serde = "1.0.152"
solana-logger = { package = "waffles-solana-logger", path = "../logger", version = "=1.16.0-alpha.6" }

[lib]
crate-type = ["lib"]
name = "solana_entry"

[[bench]]
name = "entry_sigverify"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
